# far117-compliance

./: .gitignore  Dockerfile  README.md  grader.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  step.json  tasks.py  tasks.yaml
server/: app.py
src/far117/: __init__.py  environment.py  grader.py  models.py  rules.py  tasks.py
