[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "far117-compliance"
version = "1.0.0"
description = "FAA FAR 117 Flight Crew Rest Compliance Checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dateutil>=2.8.0",
    "openai>=1.0.0",
]

[project.scripts]
far117-server = "server.app:app"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src.*"]