[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "far117-compliance"
version = "1.0.0"
description = "FAA FAR 117 Flight Crew Rest Compliance Checker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dateutil>=2.8.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/far117"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/server",
    "/openenv.yaml",
    "/README.md",
]
